Added delete and fetch one trail
