# swagger.yml
@@ -88,6 +88,47 @@ paths:
                     type: string
         '400':
           description: "Invalid input"
+        '406':
+          description: "Trail Already Exists"
         '500':
           description: "Internal server error"
+
+ #Fetch requests         
+  /trails/{trailId}:
+    get:
+      operationId: "TrailHandler.ReadOne"
+      summary: "Get a trail by ID"
+      parameters:
+        - name: "trailId"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+          description: "ID of the trail to get"
+      responses:
+        '200':
+          description: "Trail found"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Trail"
+        '404':
+          description: "Trail not found"     
+
+
+    delete:
+      summary: "Delete a trail by ID"
+      operationId: "TrailHandler.Delete"
+      parameters:
+        - name: "trailId"
+          in: "path"
+          required: true
+          schema:
+            type: "string"
+          description: "ID of the trail to delete"
+      responses:
+        '200':
+          description: "Trail deleted"
+        '404':
+          description: "Trail not found"
   
